# realestate_webscrape

./: README.md  pyproject.toml
estate_scraper/: inital_scraper.py
tests/: test_scraper.py
