[tool.poetry]
name = "estate-scraper"
version = "0.1.0"
description = ""
authors = ["krodiv <krodiv@gmail.com>"]
readme = "README.md"
packages = [{include = "estate_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
